--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hydivergence-backend-contracts",
+  "name": "poption-contracts",
   "version": "0.0.1",
   "license": "unlicensed",
   "private": true,
