--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,7 +1,7 @@
 name: Test Contract
 on: [push]
 jobs:
-  Test Contract:
+  Test-Contract:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-node@v3
