--- a/.github/workflows/github-test.yml
+++ b/.github/workflows/github-test.yml
@@ -1,14 +1,19 @@
 name: Test Contract
 on: [push]
 jobs:
-  Test-Contract:
+  unit-tests:
+    name: Unit Tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-            node-version: '16'
-      - run: npm install
-      - run: npx hardhat compile
-      - run: npx hardhat test
-      - run: npx hardhat coverage
+          node-version: "16"
+      - name: initial
+        run: npm install
+      - name: compile
+        run: npx hardhat compile
+      - name: test
+        run: npx hardhat test
+      - name: coverage
+        run: npx hardhat coverage
