--- a/.github/workflows/github-test.yml
+++ b/.github/workflows/github-test.yml
@@ -1,5 +1,10 @@
-name: Test Contract
-on: [push]
+name: Tests
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+
 jobs:
   unit-tests:
     name: Unit Tests
