--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "bn.js": "^5.2.0",
     "decimal.js": "^10.3.1",
     "ethers": "^5.5.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "node-fetch-with-proxy": "^0.1.6"
   },
   "scripts": {
     "make-badges": "istanbul-badges-readme",
