--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "solidity-coverage": "^0.7.17"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.4.1",
     "@ethersproject/hardware-wallets": "^5.5.0",
     "@openzeppelin/contracts": "^4.4.0",
     "@uniswap/v3-core": "^1.0.0",
